# fastbot

./: .dockerignore  .gitignore  Makefile  README.md
.devcontainer/dev/: Dockerfile  devcontainer.json
.devcontainer/real/: .env.example  devcontainer.json  services.sh  setup-tailscale.sh
.devcontainer/real-husarnet/: .env.example  devcontainer.json  docker-compose.devcontainer.yaml
.devcontainer/simulation/: devcontainer.json  docker-compose.devcontainer.yaml
Lslidar_ROS2_driver/lslidar_driver/launch/: lslidar_launch.py
docker/real/: Dockerfile.remote  Dockerfile.robot  Dockerfile.slam  README-REMOTE.md  README.md  cyclonedds-husarnet.xml  cyclonedds-local.xml  cyclonedds.xml  docker-compose.remote-husarnet.yaml  docker-compose.remote.yaml  docker-compose.yaml
docker/real/scripts/: ros_entrypoint.sh  start_remote_services.sh
docker/simulation/: Dockerfile.gazebo  Dockerfile.slam  Dockerfile.web  README.md  docker-compose.prod.yaml  docker-compose.yaml
docker/simulation/scripts/: ros_entrypoint.sh  start_web_services.sh
docs/: README.md  udev-rules.md
fastbot_bringup/launch/: bringup.launch.xml
fastbot_description/: CMakeLists.txt  package.xml
fastbot_description/launch/: fastbot.launch.py  robot_state_publisher.launch.py
fastbot_description/models/urdf/: fastbot_body.xacro  fastbot_sim.xacro
fastbot_gazebo/launch/: botbox_world.launch.xml  botbox_world_room.launch.xml  spawn.launch.xml  spawn_fastbot.launch.xml
fastbot_slam/: CMakeLists.txt  README.md  package.xml
fastbot_slam/config/: amcl_config.yaml  behavior.yaml  bt_navigator.yaml  cartographer.lua  controller.yaml  planner_server.yaml
fastbot_slam/launch/: cartographer.launch.py  localization.launch.py  map_server.launch.py  navigation.launch.py  pathplanner.launch.py
fastbot_slam/maps/: appartment.pgm  appartment.yaml  room_gazebo.pgm  room_gazebo.yaml  studio.pgm  studio.yaml  studio_edit.pgm  studio_edit.yaml
fastbot_slam/rviz/: localizer.rviz  map_display.rviz  mapping.rviz  pathplanning.rviz
fastbot_slam/scripts/: timestamp_filter_node.py  trigger_global_localization.py
fastbot_webapp/: fastbot_description  index.html  main.js  styles.css
fastbot_webapp/patch/: ros3d_patch.js
serial_motor/: package.xml
serial_motor/serial_motor/: motor_driver.py
tf2_web_republisher_py/tf2_web_republisher_py/: package.xml
