<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fastbot_slam</name>
  <version>0.0.0</version>
  <description>Fastbot SLAM </description>
  <maintainer email="dmitri.manajev@protonmail.com">Dmitri Manajev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>  
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <depend>cartogrpaher-ros</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
